<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/parentMain">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logintxt"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="30dp"
            android:id="@+id/txtlogin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:layout_marginTop="120sp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:endIconMode="password_toggle"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="20dp"
            android:layout_below="@id/usernameLayout"
            >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="@color/white"
                    />

        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/passwordLayout"
            android:layout_centerHorizontal="true"
            android:text="@string/logintxt"
            android:id="@+id/btnLogin"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loginPageRegLinkTxt"
            android:layout_below="@id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20sp"
            android:id="@+id/regLink"
            style="@style/Widget.Material3.Button.TextButton"
            android:textSize="15sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/regLink"
            style="@style/Widget.Material3.Button.TextButton"
            android:text="@string/forgotPasswordLinkTxt"
            android:layout_centerHorizontal="true"
            android:textSize="15sp"
            />





</RelativeLayout>